--- a/service.yml
+++ b/service.yml
@@ -14,16 +14,9 @@ settings:
   default: public
   var: DOCROOT_SUBDIR
 
-links:
-- name: storage
-  title: Storage
-  required: true
-  selectors:
-  - type: storage
-
 volumes:
 - name: storage
-  link: storage
+  from: backend
   title: Storage
   path: /mnt/files
 
